# liberate

./: README.md  meson.build
demo/: Demo.vala  meson.build
lib/: Liberate.vala  Library.vala  Reader.vala  meson.build
lib/data/: gresource.xml  patcher.js  theme-light.css
